[package]
name = "cached"
version = "0.1.0"
authors = ["Alexander Jesipow"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/server.rs"
name = "server"

[[bin]]
path = "src/bin/client.rs"
name = "client"

[dependencies]
tokio = { version = "1.17.0", features=["full"] }
console-subscriber = "0.1"
dashmap = "5.3"
bytes = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"


[dev-dependencies]
rstest = "0.12.0"