[package]
name = "cached-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features=["rt", "rt-multi-thread"] }
cached = {path = "../cached"}
futures = "0.3"
nom = "7.1"
clap = { version = "4.1.6", features=["derive"] }