[package]
name = "cached-server"
version = "0.1.0"
authors = ["Alexander Jesipow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracing = ["dep:tracing", "dep:tracing-chrome", "dep:tracing-subscriber", "cached/tracing"]

[dependencies]
cached = {path = "../cached"}
tokio = { version = "1.25.0", features=["rt", "rt-multi-thread"] }
clap = { version = "4.1.6", features=["derive"] }
tracing = { version = "0.1", optional = true }
tracing-chrome = { version = "0.7.1", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }