[package]
name = "cached-server"
version = "0.1.0"
authors = ["Alexander Jesipow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracing = ["dep:tracing", "dep:tracing-chrome", "dep:tracing-subscriber", "cached/tracing"]

[dependencies]
cached = {path = "../cached"}
tokio = { workspace = true, features=["rt", "rt-multi-thread"] }
clap = { workspace = true, features=["derive"] }
tracing = { workspace = true, optional = true }
tracing-chrome = { version = "0.7.1", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }