[package]
name = "cached"
version = "0.1.0"
authors = ["Alexander Jesipow"]
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
tracing = ["dep:tracing"]

[dependencies]
tokio = { workspace = true, features=["sync", "rt", "signal", "net", "time", "io-util", "macros"] }
async-trait = "0.1.64"
bytes = "1.1.0"
nom = { workspace = true }
thiserror = "1.0"
tracing = { workspace = true, optional = true }


[dev-dependencies]
rstest = "0.16.0"
tokio = { workspace = true, features=["sync", "rt", "signal", "net", "time", "io-util", "macros", "rt-multi-thread"] }
criterion = {version = "0.4", features=["async_tokio"] }
futures = "0.3"
dhat = "0.3"

[[bench]]
name = "server"
harness = false